// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`WithFacility With one facility should render with a value 1`] = `
<p>
  Loading facility information...
</p>
`;

exports[`WithFacility With two facilities should render with a value 1`] = `
<main
  className="prime-home"
  id="facility-select"
>
  <div
    className="grid-container"
  >
    <div
      className="grid-row position-relative"
    >
      <div
        className="prime-container card-container"
      >
        <div
          className="usa-card__header"
        >
          <div>
            <h2>
              SimpleReport
            </h2>
            <div
              className="organization-name"
            >
              Organization Name
            </div>
          </div>
        </div>
        <div
          className="usa-card__body"
        >
          <p
            className="welcome"
          >
            Welcome, 
            Kim Mendoza
          </p>
          <p
            className="select-text"
          >
            Please select the testing facility where you are working today.
          </p>
          <button
            className="usa-button usa-button--outline"
            onClick={[Function]}
            type="button"
          >
            Facility 1
          </button>
          <button
            className="usa-button usa-button--outline"
            onClick={[Function]}
            type="button"
          >
            Facility 2
          </button>
        </div>
      </div>
    </div>
  </div>
</main>
`;

exports[`WithFacility With zero facilities should notify user to contact an admin 1`] = `
<main
  className="prime-home"
  id="facility-select"
>
  <div
    className="grid-container"
  >
    <div
      className="grid-row position-relative"
    >
      <div
        className="prime-container card-container"
      >
        <div
          className="usa-card__header"
        >
          <div>
            <h2>
              SimpleReport
            </h2>
            <div
              className="organization-name"
            >
              Organization Name
            </div>
          </div>
        </div>
        <div
          className="usa-card__body"
        >
          <p
            className="welcome"
          >
            Welcome, 
            Kim Mendoza
          </p>
          <p>
            You do not have access to any facilities at this time.
          </p>
          <p>
            Ask an administrator to assign you access, then try logging in again.
          </p>
        </div>
      </div>
    </div>
  </div>
</main>
`;
